# django-manage.py

./: README.md  package.json  setup.cfg  setup.py
django_manage/: __init__.py
scripts/: .django
