# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-manage
version = 2019.4.13
url = https://github.com/looking-for-a-job/django-manage.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django

[options]
install_requires = 
	Django>1.0
	setuptools
scripts = 
	scripts/manage.py
